--- a/index.html
+++ b/index.html
@@ -19,73 +19,88 @@
                 everywhere</span>
         </div>
         <div>
-            <div class="updated">Last updated: Feb 17, 2023</div>
+            <div class="updated">Last updated: May 16, 2023</div>
             <div class="download">
                 <a href="Dmitry Mikhalkov.pdf" download="Dmitry Mikhalkov.pdf">Save as PDF</a>
+            </div>
+            <div class="available">
+                Visit the link below for an up-to-date resume:<br />
+                <a href="https://trainymonked.github.io/resume">trainymonked.github.io/resume</a>
             </div>
         </div>
     </header>
 
     <section class="briefly">
         <p class="title">Frontend Developer <span class="type">with 2 years of experience</span></p>
-        <p>22 years old, Bachelor of Engineering</p>
+        <p>23 years old, Bachelor of Engineering</p>
         <p>Gomel, Belarus | Ready for relocation</p>
-    </section>
-
-    <section class="mil">
-        <details class="mil__details">
-            <summary>Military Service</summary>
-            <div class="project">
-                <div class="timeline">
-                    Nov 2021 - Nov 2022
-                    <br>1 year
-                </div>
-                <div>
-                    <div class="title">Military Service</div>
-                    <div class="client">🪖 Conscription</div>
-                    <div class="description">You'll probably ask why I didn't work for a whole year</div>
-                    <div class="responsibilities">
-                        <p class="project__heading">Responsibilities:</p>
-                        <p>- do this</p>
-                        <p>- don't do that</p>
-                    </div>
-                </div>
-            </div>
-        </details>
-    </section>
-
-    <section class="mil__print">
-        <div class="project">
-            <div class="timeline">
-                Nov 2021 - Nov 2022
-                <br>1 year
-            </div>
-            <div>
-                <div class="title">Military Service</div>
-                <div class="client">🪖 Conscription</div>
-                <div class="description">You'll probably ask why I didn't work for a whole year</div>
-                <div class="responsibilities">
-                    <p class="project__heading">Responsibilities:</p>
-                    <p>- do this</p>
-                    <p>- don't do that</p>
-                </div>
-            </div>
-        </div>
     </section>
 
     <p class="heading">Latest Projects:</p>
 
     <section class="project">
         <div class="timeline">
-            July 2021 - Oct 2021
+            Apr 2023 - May 2023
+            <br>2 months
+        </div>
+        <div>
+            <div class="title">Reviews</div>
+            <div class="description">
+                Reviews is a kind of IMDB clone that I created as a task.<br />
+                You can sign in and then add reviews to different Movies/TV Shows/Games and rate them.
+                Or you can add another Movie/TV Show/Game if it doesn't exist.
+            </div>
+            <div class="responsibilities">
+                <p class="project__heading">Responsibilities:</p>
+                <p>- Frontend developing with React.js, Material UI, TypeScript</p>
+                <p>- Backend developing with Next.js, Prisma ORM (PostgreSQL)</p>
+                <p>- Investigating and fixing bugs</p>
+                <p class="project__heading">Tech Stack:</p>
+                <p>
+                    Next.js, TypeScript, React, Material UI, Prisma ORM (PostgreSQL), Git (GitHub), Vercel, NextAuth.js.
+                </p>
+            </div>
+        </div>
+    </section>
+
+    <section class="project">
+        <div class="timeline">
+            Jan 2023 - Present
+            <br>5+ months
+        </div>
+        <div>
+            <div class="title">Fancy Todo</div>
+            <div class="description">
+                Fancy Todo is not just to-do CRUD app. This is a schedule to-do app with a lot of features.
+                The features are, e.g.: adding, editing, marking as done, moving, deleting todos; custom categories,
+                user authorization, dragging, keyboard navigation, use of reCAPTCHA, etc.
+            </div>
+            <div class="responsibilities">
+                <p class="project__heading">Responsibilities:</p>
+                <p>- Application Design</p>
+                <p>- Frontend developing with React.js, Material UI, Tailwind CSS</p>
+                <p>- Backend developing with Node.js, MongoDB, Express.js</p>
+                <p class="project__heading">Tech Stack:</p>
+                <p>
+                    <strong>MERN</strong>, JavaScript, Context API, Material UI, Tailwind CSS, Git (GitHub), GitHub
+                    Pages, JWT, bcrypt.js.
+                </p>
+            </div>
+        </div>
+    </section>
+
+    <section class="project">
+        <div class="timeline">
+            Jul 2021 - Oct 2021
             <br>4 months
         </div>
         <div>
-            <div class="title">Frontend React Developer</div>
-            <div class="client">🏢 IBA</div>
-            <div class="description">Full-time employment. English only. <br>The client had a government website full of
-                services for a large city. Every business or individual user can i.e. issue or modify a license using an
-                easy to use UI in just about 6 minutes instead of going to the office and waiting in line, etc.</div>
+            <div class="title">"Super App" Website</div>
+            <div class="description">
+                The client had a government website full of services for a large city. Every business or individual user
+                can i.e. issue or modify a license using an easy to use UI in just about 6 minutes instead of going to
+                the office and waiting in line, etc.
+            </div>
             <div class="responsibilities">
                 <p class="project__heading">Responsibilities:</p>
                 <p>- Frontend developing (using internal IDE based on React/Redux + TS)</p>
@@ -104,12 +119,12 @@
             <br>3 months
         </div>
         <div>
-            <div class="title">Frontend React Developer</div>
-            <div class="client">🏢 IBA feat. Visual Flow</div>
-            <div class="description">Part-time employment. At first - internal project. <br>Visual Flow is a low code
-                ETL solution designed for effective data manipulation via convenient and user-friendly interface. The
-                tool can integrate data from different sources (DB2, COS, Elastic Search), perform data processing and
-                transformation, leverage metadata for analysis and maintenance.</div>
+            <div class="title">Visual Flow</div>
+            <div class="description">
+                Visual Flow is a low code ETL solution designed for effective data manipulation via convenient and
+                user-friendly interface. The tool can integrate data from different sources (DB2, COS, Elastic Search),
+                perform data processing and transformation, leverage metadata for analysis and maintenance.
+            </div>
             <div class="responsibilities">
                 <p class="project__heading">Responsibilities:</p>
                 <p>- Frontend developing with React.js and Redux</p>
@@ -123,28 +138,36 @@
         </div>
     </section>
 
-    <section class="project">
-        <div class="timeline">
-            Dec 2020 - Apr 2021
-            <br>5 months
-        </div>
-        <div>
-            <div class="title">Fullstack (MERN) Developer</div>
-            <div class="client">🎓 University Project - Graduate Work</div>
-            <div class="description">Careers tab for a company website. <br>This project is about careers (vacancies)
-                tab on a company website. There are 2 types of access in this project: read-only access for everyone,
-                and full access for administrators.
-                Everyone can see the list of careers. Administrators can add, edit, and remove careers from the database
-                using admin panel on the website.</div>
-            <div class="responsibilities">
-                <p class="project__heading">Responsibilities:</p>
-                <p>- Application Design</p>
-                <p>- Frontend developing with React.js, Context API, TinyMCE</p>
-                <p>- Backend developing with Node.js, MongoDB, Express.js</p>
-                <p class="project__heading">Tech Stack:</p>
-                <p>JavaScript, React.js, HTML5, CSS3, Node.js, MongoDB, Express.js, JWT, bcrypt.js, TinyMCE.</p>
+    <section class="older-projects">
+        <details>
+            <summary>Show older projects</summary>
+            <div class="project">
+                <div class="timeline">
+                    Dec 2020 - Apr 2021
+                    <br>5 months
+                </div>
+                <div>
+                    <div class="title">Careers (University Project)</div>
+                    <div class="description">
+                        This project is about careers tab on a company website. There are 2 types of access in this
+                        project:
+                        read-only access for everyone, and full access for administrators. Everyone can see the list
+                        of careers.
+                        Administrators can add, edit, and remove careers from the database using admin panel on the
+                        website.
+                    </div>
+                    <div class="responsibilities">
+                        <p class="project__heading">Responsibilities:</p>
+                        <p>- Application Design</p>
+                        <p>- Frontend developing with React.js, Context API, TinyMCE</p>
+                        <p>- Backend developing with Node.js, MongoDB, Express.js</p>
+                        <p class="project__heading">Tech Stack:</p>
+                        <p>JavaScript, React.js, HTML5, CSS3, Node.js, MongoDB, Express.js, JWT, bcrypt.js, TinyMCE.
+                        </p>
+                    </div>
+                </div>
             </div>
-        </div>
+        </details>
     </section>
 
     <p class="heading">Courses/Trainings:</p>
@@ -186,7 +209,7 @@
     </section>
 
     <section class="pets">
-        <p>Check some of my pet projects hosted on GitHub -
+        <p>Check some of my pet projects hosted on GitHub Pages -
             <a href="https://trainymonked.github.io" target="_blank"
                 rel="noopener noreferrer">trainymonked.github.io</a>
         </p>
@@ -195,7 +218,8 @@
     <section class="skills">
         <b>Professional skills:</b>
         <p>- HTML5, CSS3, JavaScript (ECMAScript 5 and later)</p>
-        <p>- React.js, Redux, TypeScript</p>
+        <p>- React.js, Redux, TypeScript, Next.js, Prisma ORM</p>
+        <p>- Material UI, PostgreSQL, Tailwind CSS</p>
         <p>- Node.js, Express.js, MongoDB, JWT, bcrypt.js</p>
         <!-- <p>- JEST, Karma, Jasmine</p> -->
         <p>- Git, GitHub, GitLab, Gerrit, Jira</p>
