--- a/index.html
+++ b/index.html
@@ -19,9 +19,10 @@
                 everywhere</span>
         </div>
         <div>
-            <div class="updated">Last updated: May 16, 2023</div>
+            <div class="updated">Last updated: Jun 24, 2023</div>
             <div class="download">
-                <a href="Dmitry Mikhalkov.pdf" download="Dmitry Mikhalkov.pdf">Save as PDF</a>
+                <a href="Dmitry Mikhalkov.pdf" download="Dmitry Mikhalkov.pdf" class="pdf">Save as PDF</a>
+                <a href="https://trainymonked.github.io/resume/ru" class="lang">На русском</a>
             </div>
             <div class="available">
                 Visit the link below for an up-to-date resume:<br />
@@ -31,7 +32,7 @@
     </header>
 
     <section class="briefly">
-        <p class="title">Frontend Developer <span class="type">with 2 years of experience</span></p>
+        <p class="title">Front-end Developer <span class="type">with 2 years of experience</span></p>
         <p>23 years old, Bachelor of Engineering</p>
         <p>Gomel, Belarus | Ready for relocation</p>
     </section>
@@ -52,8 +53,8 @@
             </div>
             <div class="responsibilities">
                 <p class="project__heading">Responsibilities:</p>
-                <p>- Frontend developing with React.js, Material UI, TypeScript</p>
-                <p>- Backend developing with Next.js, Prisma ORM (PostgreSQL)</p>
+                <p>- Front-end developing with React.js, Material UI, TypeScript</p>
+                <p>- Back-end developing with Next.js, Prisma ORM (PostgreSQL)</p>
                 <p>- Investigating and fixing bugs</p>
                 <p class="project__heading">Tech Stack:</p>
                 <p>
@@ -66,24 +67,24 @@
     <section class="project">
         <div class="timeline">
             Jan 2023 - Present
-            <br>5+ months
+            <br>6+ months
         </div>
         <div>
             <div class="title">Fancy Todo</div>
             <div class="description">
                 Fancy Todo is not just to-do CRUD app. This is a schedule to-do app with a lot of features.
-                The features are, e.g.: adding, editing, marking as done, moving, deleting todos; custom categories,
+                The features are, e.g.: adding, editing, marking as done, deleting todos; custom categories,
                 user authorization, dragging, keyboard navigation, use of reCAPTCHA, etc.
             </div>
             <div class="responsibilities">
                 <p class="project__heading">Responsibilities:</p>
                 <p>- Application Design</p>
-                <p>- Frontend developing with React.js, Material UI, Tailwind CSS</p>
-                <p>- Backend developing with Node.js, MongoDB, Express.js</p>
+                <p>- Front-end developing with React.js, Context API, Material UI</p>
+                <p>- Back-end developing with Node.js, MongoDB, Express.js</p>
                 <p class="project__heading">Tech Stack:</p>
                 <p>
-                    <strong>MERN</strong>, JavaScript, Context API, Material UI, Tailwind CSS, Git (GitHub), GitHub
-                    Pages, JWT, bcrypt.js.
+                    <strong>MERN</strong>, JavaScript, Context API, Material UI, Git (GitHub), GitHub Pages, JWT,
+                    bcrypt.js.
                 </p>
             </div>
         </div>
@@ -91,8 +92,8 @@
 
     <section class="project">
         <div class="timeline">
-            Jul 2021 - Oct 2021
-            <br>4 months
+            Jun 2021 - Oct 2021
+            <br>5 months
         </div>
         <div>
             <div class="title">"Super App" Website</div>
@@ -103,7 +104,7 @@
             </div>
             <div class="responsibilities">
                 <p class="project__heading">Responsibilities:</p>
-                <p>- Frontend developing (using internal IDE based on React/Redux + TS)</p>
+                <p>- Front-end developing (using internal IDE based on React/Redux + TS)</p>
                 <p>- Extending business logic</p>
                 <p>- Investigating and fixing bugs</p>
                 <p>- Daily Scrum meetings in English</p>
@@ -115,8 +116,8 @@
 
     <section class="project">
         <div class="timeline">
-            Apr 2021 - Jun 2021
-            <br>3 months
+            Feb 2021 - May 2021
+            <br>4 months
         </div>
         <div>
             <div class="title">Visual Flow</div>
@@ -127,7 +128,7 @@
             </div>
             <div class="responsibilities">
                 <p class="project__heading">Responsibilities:</p>
-                <p>- Frontend developing with React.js and Redux</p>
+                <p>- Front-end developing with React.js and Redux</p>
                 <p>- Extending business logic</p>
                 <p>- Investigating and fixing bugs</p>
                 <p>- Enhancing code readability and reducing code smells</p>
@@ -159,8 +160,8 @@
                     <div class="responsibilities">
                         <p class="project__heading">Responsibilities:</p>
                         <p>- Application Design</p>
-                        <p>- Frontend developing with React.js, Context API, TinyMCE</p>
-                        <p>- Backend developing with Node.js, MongoDB, Express.js</p>
+                        <p>- Front-end developing with React.js, Context API, TinyMCE</p>
+                        <p>- Back-end developing with Node.js, MongoDB, Express.js</p>
                         <p class="project__heading">Tech Stack:</p>
                         <p>JavaScript, React.js, HTML5, CSS3, Node.js, MongoDB, Express.js, JWT, bcrypt.js, TinyMCE.
                         </p>
@@ -174,11 +175,11 @@
 
     <section class="project">
         <div class="timeline">
-            Dec 2019 - Mar 2021
-            <br>1 year 4 months
+            Dec 2019 - Jan 2021
+            <br>1 year 2 months
         </div>
         <div>
-            <div class="title">Frontend/JS Trainee</div>
+            <div class="title">Front-end/JS Trainee</div>
             <div class="client">🏢 IBA</div>
             <div class="description">Professional training on internal projects by mentors - employees of the company
             </div>
@@ -186,7 +187,7 @@
                 <p class="project__heading">Goals Achieved:</p>
                 <p>- Learned fundamentals of React.js, Redux, TypeScript, Unit-testing, Angular, Node.js</p>
                 <p>- Learned advanced logic of Git, JavaScript (ECMAScript 5+)</p>
-                <p>- Built some frontend projects based on SRS</p>
+                <p>- Built some front-end projects based on SRS</p>
             </div>
         </div>
     </section>
@@ -223,7 +224,7 @@
         <p>- Node.js, Express.js, MongoDB, JWT, bcrypt.js</p>
         <!-- <p>- JEST, Karma, Jasmine</p> -->
         <p>- Git, GitHub, GitLab, Gerrit, Jira</p>
-        <p>- Responsive websites from design mock-ups</p>
+        <p>- Responsive websites from design mock-ups (Figma)</p>
         <!-- <p>- Angular, TinyMCE</p> -->
         <!-- <p>- OOP, MVC, REST API</p> -->
     </section>
