--- a/index.html
+++ b/index.html
@@ -5,23 +5,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dmitry Mikhalkov</title>
+    <title>Dzmitry Mikhalkou</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
     <header>
         <div class="name">
-            <span>Dmitry Mikhalkov</span>
+            <span>Dzmitry Mikhalkou</span>
             &ndash;
             <span>contact
                 <a href="https://trainymonked.github.io/me" target="_blank">@trainymonked</a>
                 everywhere</span>
         </div>
         <div>
-            <div class="updated">Last updated: Jun 24, 2023</div>
+            <div class="updated">Last updated: Sep 23, 2023</div>
             <div class="download">
-                <a href="Dmitry Mikhalkov.pdf" download="Dmitry Mikhalkov.pdf" class="pdf">Save as PDF</a>
+                <a href="Dzmitry Mikhalkou.pdf" download="Dzmitry Mikhalkou.pdf" class="pdf">Save as PDF</a>
                 <a href="https://trainymonked.github.io/resume/ru" class="lang">На русском</a>
             </div>
             <div class="available">
@@ -34,7 +34,7 @@
     <section class="briefly">
         <p class="title">Front-end Developer <span class="type">with 2 years of experience</span></p>
         <p>23 years old, Bachelor of Engineering</p>
-        <p>Gomel, Belarus | Ready for relocation</p>
+        <p>Szczecinek, Poland | Ready for relocation</p>
     </section>
 
     <p class="heading">Latest Projects:</p>
@@ -66,8 +66,8 @@
 
     <section class="project">
         <div class="timeline">
-            Jan 2023 - Present
-            <br>6+ months
+            Jan 2023 - Jun 2023
+            <br>6 months
         </div>
         <div>
             <div class="title">Fancy Todo</div>
