--- a/ru/index.html
+++ b/ru/index.html
@@ -18,7 +18,7 @@
                     target="_blank">@trainymonked</a></span>
         </div>
         <div>
-            <div class="updated">Обновлено: 24 июня 2023</div>
+            <div class="updated">Обновлено: 23 сентября 2023</div>
             <div class="download">
                 <a href="Дмитрий Михалков.pdf" download="Дмитрий Михалков.pdf" class="pdf">Сохранить PDF</a>
                 <a href="https://trainymonked.github.io/resume" class="lang">In English</a>
@@ -33,7 +33,7 @@
     <section class="briefly">
         <p class="title">Front-end разработчик <span class="type">с 2 годами опыта</span></p>
         <p>23 года, высшее техническое образование</p>
-        <p>Гомель, Беларусь | Готов к переезду</p>
+        <p>Щецинек, Польша | Готов к переезду</p>
     </section>
 
     <p class="heading">Последние проекты:</p>
@@ -66,8 +66,8 @@
 
     <section class="project">
         <div class="timeline">
-            Янв 2023 - Сейчас
-            <br>6+ месяцев
+            Янв 2023 - Июн 2023
+            <br>6 месяцев
         </div>
         <div>
             <div class="title">Fancy Todo</div>
